--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-a { text-decoration: none; }
-.container {width:960px;
-      margin:0 auto;
-      padding:10px 25px;
-      border:1px solid #ccc;
-      background: rgb(10, 9, 77); }
+h1{
+    color: #551c1c;
+    text-decoration: none;
+    text-decoration: none;
+    font-family: Spartan;
+    font-size: x-small;
+  }
