--- a/style.css
+++ b/style.css
@@ -3,6 +3,5 @@ h1{
     color: #551c1c;
     text-decoration: none;
     text-decoration: none;
-    font-family: Spartan;
-    font-size: x-small;
+    font-family: Ok;
   }
