--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ h2{
   line-height: 1.5;
   background-color: var(--color-bg);
   background-color: #8a1b1b;
-    align: center;
   background-image: url("https://media2.giphy.com/media/zKQnUF8U01I4GXN1ib/giphy.gif?cid=ecf05e47t0anqurisb1cn6mdcwvdvtqxob6smgiis3kt96ae&rid=giphy.gif&ct=g");
-  style="mix-blend-mode: overlay;
-  background-repeat: no-repeat;
+  style= "mix-blend-mode: overlay;
+  background-repeat; no-repeat;
   background-size: cover;
   display: center;
   flex-direction: center;
     background-position: center;
   background-blend-mode: soft-light;
+  }
