--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ h1{
     color: #ffffff;
     text-decoration: none;
     text-decoration: none;
-  font: normal 222px Spartan;
+  font: normal 200px Neilvard Three;
   text-align: center; 
   color: hsl(0, 0%, 100%);
-  margin: -120 px
+  margin: -400 px
 
   }
 h2{
@@ -14,18 +14,16 @@ h2{
     color: #ffffff;
     text-decoration: none;
     text-decoration: none;
-  font: normal 20px Spartan;
+  font: normal 18px Neilvard Three;
   text-align: center; 
   color: #ffffff;
   }
-
   body {
   margin: 1rem;
   line-height: 1.5;
   background-color: var(--color-bg);
-  background-color: #8a1b1b;
+  background-color: #6e1e1e;
   background-image: url("https://media2.giphy.com/media/zKQnUF8U01I4GXN1ib/giphy.gif?cid=ecf05e47t0anqurisb1cn6mdcwvdvtqxob6smgiis3kt96ae&rid=giphy.gif&ct=g");
-  background-repeat: repeat-y;
   background-size: cover;
   display: center;
   flex-direction: center;
