--- a/style.css
+++ b/style.css
@@ -18,6 +18,27 @@ font: normal 18px Neilvard Three;
 text-align: center; 
 color: #ffffff;
 }
+
+h3{
+  
+  color: #ffffff;
+  text-decoration: none;
+  text-decoration: none;
+font: normal 18px Neilvard Three;
+text-align: center; 
+color: #ffffff;
+}
+
+h4{
+  
+  color: #ffffff;
+  text-decoration: none;
+  text-decoration: none;
+font: normal 18px Neilvard Three;
+text-align: center; 
+color: #ffffff;
+}
+
 body {
 margin: 1rem;
 line-height: 1.5;
