--- a/style.css
+++ b/style.css
@@ -63,3 +63,12 @@ text-align: center;
 color: #ffffff;
 }
 
+h6{
+  
+  color: #ffffff;
+  text-decoration: none;
+  text-decoration: none;
+font: normal 18px Neilvard Three;
+text-align: center; 
+color: #ffffff;
+}
